# polka-attack-experiment

./: README.md  build.sh
code/attack_polkadot_sdk/: Cargo.toml  build.sh
code/attack_polkadot_sdk/docker/dockerfiles/: binary_injected.Dockerfile
code/attack_polkadot_sdk/docker/scripts/: build-injected.sh
code/attack_polkadot_sdk/polkadot/: Cargo.toml
code/attack_polkadot_sdk/substrate/client/consensus/babe/: Cargo.toml
code/attack_polkadot_sdk/substrate/client/consensus/slots/: Cargo.toml
code/attack_polkadot_sdk/substrate/client/tsattack/: Cargo.toml  README.md
code/attack_polkadot_sdk/substrate/client/tsattack/examples/: README.md  simple.rs  usage.rs
code/attack_polkadot_sdk/substrate/client/tsattack/src/: lib.rs
code/attack_polkadot_sdk/substrate/primitives/timestamp/: Cargo.toml
code/attack_polkadot_sdk/substrate/primitives/timestamp/src/: lib.rs
code/attack_polkadot_sdk/substrate/utils/frame/benchmarking-cli/: Cargo.toml
code/attack_polkadot_sdk/tampered-time/: Cargo.toml
code/attack_polkadot_sdk/tampered-time/src/: lib.rs
code/normal_polkadot_sdk/: build.sh
code/polka-utils/: build.sh
testcase/: run.sh  stop.sh  test.sh
testcase/3/: .dockerignore  alice.Dockerfile  docker-attack.yml  docker-compose.yml  relaychain.Dockerfile
testcase/4/: docker-attack.yml  docker-compose.yml
testcase/5/: docker-attack.yml  docker-compose.yml
testcase/6/: .dockerignore  docker-attack.yml  docker-compose.yml
testcase/7/: docker-attack.yml  docker-compose.yml  node.sh
testcase/8/: docker-attack.yml  docker-compose.yml
(+11 files in other folders)
