[package]
name = "tsattack"
version = "0.0.1"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
tsattack-client = "0.0.1"
once_cell = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
log = { workspace = true }

[dev-dependencies]
env_logger = "0.10"